[package]
name = "rockscrew"
version = "0.1.1"
edition = "2021"
authors = ["王宇逸 <Strawberry_Str@hotmail.com>"]
description = "Port of corkscrew in Rust"
repository = "https://github.com/Berrysoft/rockscrew"
homepage = "https://github.com/Berrysoft/rockscrew"
keywords = ["corkscrew", "proxy", "http", "https"]
categories = ["network-programming"]
license = "GPL-2.0-only"

[dependencies]
base64 = "0.21.7"
httparse = "1.8.0"
tokio = { version = "1.35.1", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "rt",
] }

[profile.release]
lto = true
codegen-units = 1
