[package]
name = "rockscrew"
version = "0.2.0"
edition = "2021"
authors = ["王宇逸 <Strawberry_Str@hotmail.com>"]
description = "Port of corkscrew in Rust"
repository = "https://github.com/Berrysoft/rockscrew"
homepage = "https://github.com/Berrysoft/rockscrew"
keywords = ["corkscrew", "proxy", "http", "https"]
categories = ["network-programming"]
license = "GPL-2.0"

[dependencies]
base64 = "0.21.7"
httparse = "1.8.0"
compio = { version = "0.9.0-beta.4", features = ["macros", "nightly"] }
futures-util = "0.3.30"

[profile.release]
lto = true
codegen-units = 1

[features]
default = []
polling = ["compio/polling"]
